# fabric-rs

./: .fabric  CHANGELOG.md  Cargo.toml  README.md  README.org  template.fabric.json
src/: fabric.rs  main.rs  mkfabric.rs
