[package]
name = "fabric-rs"
version = "0.2.0"
edition = "2021"
default-run = "fabric"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "fabric"
path = "src/main.rs"

[[bin]]
name = "mk-fabric"
path = "src/mkfabric.rs"
